troca de numero do whatsapp

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rocket Links</title>
     <link href="https: //fonts.googleapis.com/css2? família= Roboto+Mono &family= Roboto:wght@500;700 & display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
-<body class="dark-pink">
+<body class="pink">
     <div class="container">
         <img class="avatar" src="https://github.com/thiagolima-05.png" alt="foto perfil">
         <h1>Thiago Lima</h1>
@@ -24,7 +24,7 @@
                 <a href="https://www.instagram.com/sir_thiagolim/?hl=pt-br" target="_blank">📹instagram</a>
             </li>
             <li>
-                <a href="https://api.whatsapp.com/send?phone=5585987633260" target="_blank">📲Whatsapp</a>
+                <a href="https://api.whatsapp.com/send?phone=5585987433260" target="_blank">📲Whatsapp</a>
                 <li>
                     <a href="https://github.com/thiagolima-05" target="_blank">🐱github</a>
                 </li>
